# LearningWithSimpleModels.jl

./: .gitignore  LICENSE  Manifest.toml  Project.toml  README.md
.data/results/JetRacer_simulation/data/: unicycle_rollout_no_model.bson  unicycle_rollout_using_model.bson  unicycle_train_model.bson
.data/results/JetRacer_simulation/no_mismatch/: unicycle_rollout_using_model.bson  unicycle_train_model.bson  unicycle_training_data.bson
.data/results/mismatch_study/: mismatch_study.bson  unicycle_with_0.25_mismatch_rollout_no_model.bson  unicycle_with_0.25_mismatch_rollout_using_model.bson  unicycle_with_0.25_mismatch_train_model.bson  unicycle_with_0.5_mismatch_rollout_using_model.bson  unicycle_with_0.5_mismatch_train_model.bson  unicycle_with_0.75_mismatch_rollout_using_model.bson  unicycle_with_0.75_mismatch_train_model.bson  unicycle_with_1.0_mismatch_rollout_using_model.bson  unicycle_with_1.0_mismatch_train_model.bson
.data/results/quadruped_preliminary/data/: quadruped_rollout_no_model.bson  quadruped_rollout_using_model.bson  quadruped_train_model.bson  quadruped_training_data.bson
.data/results/quadruped_preliminary2/data/: quadruped_params.txt  quadruped_rollout_no_model.bson  quadruped_rollout_using_model.bson  quadruped_train_model.bson  quadruped_training_data.bson
.github/workflows/: test.yml
experiments/: unicycle_controller.jl  unicycle_experiment.jl
experiments/double_pendulum/: Project.toml
experiments/double_pendulum/src/: DoublePendulumExperiment.jl  controller.jl  controller_open_loop.jl  experiment.jl  experiment_open_loop.jl  plots.jl  run.jl  run_comparison.jl  run_open_loop.jl
experiments/jetracer/: JetRacerExperiment.jl  Manifest.toml  Project.toml  experiment.jl
experiments/jetracer/lwsm_jetracer/: CMakeLists.txt  README.md  package.xml
experiments/jetracer/lwsm_jetracer/launch/: gazebo_simulation.launch  jetracer.launch
experiments/jetracer/lwsm_jetracer/msg/: RolloutData.msg
experiments/jetracer/lwsm_jetracer/scripts/: servo_controller.py  servo_controller_simulation.py
experiments/jetracer/lwsm_jetracer/src/: controller.cpp  rollout_data.cpp  rollout_data_server.cpp
experiments/jetracer/src/: JetRacerExperiment.jl  communication.jl  controller.jl  csv_export.jl  dynamics.jl  evaluate.jl  experiment.jl  gradient_estimate.jl  plot_utils.jl  plots.jl  run.jl  tests.jl  train.jl
experiments/quadruped/: Manifest.toml  Project.toml
experiments/quadruped/lwsm_quadruped/: CMakeLists.txt  README.md  package.xml
experiments/quadruped/lwsm_quadruped/include/lwsm_quadruped/: rollout_data_server.hpp
experiments/quadruped/lwsm_quadruped/launch/: gazebo_simulation.launch  quadruped.launch  quadruped_comm.launch  test_quad_control.launch
experiments/quadruped/lwsm_quadruped/msg/: RolloutData.msg
experiments/quadruped/lwsm_quadruped/src/: quad_controller.cpp  quad_simulation.cpp  rollout_data_server.cpp  test_quad_control.cpp
experiments/quadruped/src/: QuadrupedExperiment.jl  controller.jl  experiment.jl  plots.jl  run.jl
experiments/quadruped_simulated/: Manifest.toml  Project.toml
experiments/quadruped_simulated/src/: QuadrupedSimulatedExperiment.jl  controller.jl  experiment.jl  run.jl
experiments/unicycle/: mismatch_study.jl  no_mismatch.jl  plots.jl  unicycle_controller.jl  unicycle_experiment.jl
src/: LearningWithSimpleModels.jl  communication.jl  controller.jl  cost.jl  csv.jl  dynamics.jl  evaluate.jl  fig_eight_circle.jl  gradient_estimate.jl  model.jl  plot_utils.jl  policy_update.jl  spline.jl  spline_segment.jl  task.jl  train.jl  types.jl
test/: runtests.jl
(+50 files in other folders)
